--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-#spring.jpa.hibernate.ddl-auto=update
+
 spring.datasource.url=jdbc:mysql://localhost:3306/for_java?useSSL=false
 spring.datasource.username=dmitry
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+
+spring.jpa.hibernate.ddl-auto=update
+
+#????????? ??????????? ??????????? ?????
+spring.main.allow-circular-references=true
