--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <version>5.6.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.5</version>
+        </dependency>
 
     </dependencies>
 
